Fixed scrollbar for log

--- a/pages/index.css
+++ b/pages/index.css
@@ -17,16 +17,19 @@ body {
     display: block;
     float: right;
     width: 300px;
-    height: 700px;
     border: 2px solid black;
     border-radius: 10px;
     background-color: #d8b78b;
-    overflow: hidden; 
+}
+
+#logTitleDiv {
+    height: 25px;
 }
 
 #userLog {
-    overflow-y: auto;
-    padding: 15px;
+    overflow: scroll;
+    height: 650px;
+    padding: 0px 15px;
 }
 
 h3.heading {
